<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Qumanji</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bluetooth">BluetoothActivity</string>
    <string name="title_activity_bluetooth_client">BluetoothClientActivity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="questionMark">"?"</string>
    <string name="nulls">"0000"</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="title_activity_qrscan">QRScanActivity</string>

</resources>
