<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="207dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/blue"
        tools:context=".GameActivity$Game_Math_Fragment">

        <TextView
            android:text="@string/hello_world"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewOperation1"
            android:layout_toStartOf="@+id/buttonMath3"
            android:textSize="18pt"
            android:layout_above="@+id/buttonMath2"
            android:layout_toLeftOf="@+id/buttonMath3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonMath1"
            android:layout_alignBaseline="@+id/buttonMath2"
            android:layout_alignBottom="@+id/buttonMath2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/white"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonMath2"
            android:layout_alignBaseline="@+id/buttonMath3"
            android:layout_alignBottom="@+id/buttonMath3"
            android:layout_centerHorizontal="true"
            android:background="@color/white"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonMath3"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@color/white"/>



    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/green"
        tools:context=".GameActivity$Game_Math_Fragment">

        <TextView
            android:text="@string/hello_world"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewOperation2"
            android:layout_toStartOf="@+id/buttonMath6"
            android:textSize="18pt"
            android:layout_above="@+id/buttonMath5"
            android:layout_toLeftOf="@+id/buttonMath6" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonMath4"
            android:layout_alignBaseline="@+id/buttonMath5"
            android:layout_alignBottom="@+id/buttonMath5"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/white"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonMath5"
            android:layout_alignBaseline="@+id/buttonMath6"
            android:layout_alignBottom="@+id/buttonMath6"
            android:layout_centerHorizontal="true"
            android:background="@color/white"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonMath6"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@color/white"/>

    </RelativeLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:text=""
            android:layout_width="25pt"
            android:layout_height="wrap_content"
            android:id="@+id/result1"
            android:background="@color/red"
            android:textSize="20pt"/>

        <TextView
            android:text="@string/plus"
            android:layout_width="6pt"
            android:layout_height="wrap_content"
            android:id="@+id/plusSign"
            android:textSize="20pt"
            android:layout_weight="0.16" />

        <TextView
            android:text=""
            android:layout_width="25pt"
            android:layout_height="wrap_content"
            android:id="@+id/result2"
            android:background="@color/yellow"
            android:textSize="20pt"/>

        <TextView
            android:text="@string/equals"
            android:layout_width="6pt"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="20pt"
            android:layout_weight="0.16" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="78dp"
            android:id="@+id/result"
            android:background="@color/white"
            android:hint="@string/questionMark"
            android:inputType="number"
            android:textSize="20pt"
            android:layout_weight="0.51" />
    </LinearLayout>



</LinearLayout>