<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@drawable/game_bg_2">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/red"
        tools:context=".GameActivity$Game_Math_Fragment">

        <TextView
            android:text="@string/hello_world"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewOperation1"
            android:textSize="18pt"
            android:layout_above="@+id/buttonMath2"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"/>

        <Button
            android:text="@string/nulls"
            android:textSize="11pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonMath1"
            android:padding="5dp"
            android:background="@color/white"
            android:width="80dp"
            android:height="50dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:text="@string/nulls"
            android:textSize="11pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonMath2"
            android:layout_alignBaseline="@+id/buttonMath3"
            android:layout_alignBottom="@+id/buttonMath3"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:padding="5dp"
            android:width="80dp"
            android:height="50dp"/>

        <Button
            android:text="@string/nulls"
            android:textSize="11pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonMath3"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@color/white"
            android:padding="5dp"
            android:width="80dp"
            android:height="50dp"/>

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/yellow"
        tools:context=".MathActivity$MathGameFragment">

        <TextView
            android:text="@string/hello_world"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewOperation2"
            android:textSize="18pt"
            android:layout_above="@+id/buttonMath5"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white" />

        <Button
            android:text="@string/nulls"
            android:textSize="11pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonMath4"
            android:padding="5dp"
            android:background="@color/white"
            android:width="80dp"
            android:height="50dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:text="@string/nulls"
            android:textSize="11pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonMath5"
            android:layout_alignBaseline="@+id/buttonMath6"
            android:layout_alignBottom="@+id/buttonMath6"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:padding="5dp"
            android:width="80dp"
            android:height="50dp"/>

        <Button
            android:text="@string/nulls"
            android:textSize="11pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonMath6"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@color/white"
            android:padding="5dp"
            android:width="80dp"
            android:height="50dp"/>

    </RelativeLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="129dp"
        android:weightSum="1"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_weight="0.58"
        android:gravity="center">

        <TextView
            android:text="@string/questionMark"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:id="@+id/result1"
            android:background="@color/blue"
            android:textSize="12pt"
            android:padding="10dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"/>

        <TextView
            android:text="@string/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/plusSign"
            android:padding="5dp"
            android:textSize="20pt"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"/>

        <TextView
            android:text="@string/questionMark"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:id="@+id/result2"
            android:background="@color/green"
            android:textSize="12pt"
            android:padding="10dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"/>

        <TextView
            android:text="@string/equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:padding="5dp"
            android:textSize="20pt"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"/>

        <EditText
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:id="@+id/result"
            android:background="@color/white"
            android:hint="@string/questionMark"

            android:textSize="12pt"
            android:layout_weight="0.51"
            android:padding="10dp"

            android:imeOptions="actionDone"
            android:digits="1234567890-"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:gravity="center"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="seconds remaining: 000"
        android:id="@+id/countTextField"
        android:layout_gravity="center_horizontal"
        android:textColor="#cde657"
        android:background="#95000000"
        android:textStyle="bold"
        android:textSize="22dp"
        android:layout_height="65dp"
        android:layout_weight="0.33"
        android:layout_marginRight="5dp"
        android:padding="5dp"
        android:gravity="center"/>

</LinearLayout>