<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@drawable/game_bg_2">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:orientation="horizontal"
            android:background="@drawable/tablemathrunes"
            android:gravity="center">

            <GridView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/listView1"
                android:columnWidth="30dp"
                android:numColumns="auto_fit"
                android:stretchMode="columnWidth"
                android:gravity="center"/>
            <TextView
                android:text="@string/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/operation1"
                android:padding="5dp"
                android:textSize="20pt"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:gravity="center"/>
            <GridView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/listView2"
                android:columnWidth="30dp"
                android:numColumns="auto_fit"
                android:gravity="center"/>

        </LinearLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            tools:context=".GameActivity$Game_Math_Fragment">

            <Button
                android:text="@string/nulls"
                android:textSize="11pt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonMath1"
                android:padding="5dp"
                android:textColor="#cde657"
                android:background="#95000000"
                android:width="80dp"
                android:height="50dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                />

            <Button
                android:text="@string/nulls"
                android:textSize="11pt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonMath2"
                android:layout_alignBaseline="@+id/buttonMath3"
                android:layout_alignBottom="@+id/buttonMath3"
                android:layout_centerHorizontal="true"
                android:textColor="#cde657"
                android:background="#95000000"
                android:padding="5dp"
                android:width="80dp"
                android:height="50dp"/>

            <Button
                android:text="@string/nulls"
                android:textSize="11pt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonMath3"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="#cde657"
                android:background="#95000000"
                android:padding="5dp"
                android:width="80dp"
                android:height="50dp"/>



        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:orientation="horizontal"
            android:background="@drawable/tablemathrunes"
            android:gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <GridView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/listView3"
                android:columnWidth="30dp"
                android:numColumns="auto_fit"
                android:stretchMode="columnWidth"
                android:gravity="center"/>
            <TextView
                android:text="@string/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/operation2"
                android:padding="5dp"
                android:textSize="20pt"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:gravity="center"/>
            <GridView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/listView4"
                android:columnWidth="30dp"
                android:numColumns="auto_fit"
                android:gravity="center"/>

        </LinearLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            tools:context=".GameActivity$Game_Math_Fragment">

            <Button
                android:text="@string/nulls"
                android:textSize="11pt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonMath4"
                android:padding="5dp"
                android:textColor="#cde657"
                android:background="#95000000"
                android:width="80dp"
                android:height="50dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                />

            <Button
                android:text="@string/nulls"
                android:textSize="11pt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonMath5"
                android:layout_alignBaseline="@+id/buttonMath6"
                android:layout_alignBottom="@+id/buttonMath6"
                android:layout_centerHorizontal="true"
                android:textColor="#cde657"
                android:background="#95000000"
                android:padding="5dp"
                android:width="80dp"
                android:height="50dp"/>

            <Button
                android:text="@string/nulls"
                android:textSize="11pt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonMath6"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="#cde657"
                android:background="#95000000"
                android:padding="5dp"
                android:width="80dp"
                android:height="50dp"/>



        </RelativeLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="129dp"
            android:weightSum="1"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_weight="0.58"
            android:gravity="center">

            <TextView
                android:text="@string/questionMark"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:id="@+id/result1"
                android:background="@drawable/tablemathrunes"
                android:textSize="12pt"
                android:padding="10dp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:gravity="center"/>

            <TextView
                android:text="@string/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/plusSign"
                android:padding="5dp"
                android:textSize="20pt"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:gravity="center"/>

            <TextView
                android:text="@string/questionMark"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:id="@+id/result2"
                android:background="@drawable/tablemathrunes"
                android:textSize="12pt"
                android:padding="10dp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:gravity="center"/>

            <TextView
                android:text="@string/equals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:padding="5dp"
                android:textSize="20pt"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:gravity="center"/>

            <EditText
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:id="@+id/result"
                android:background="@color/blue"
                android:hint="@string/questionMark"

                android:textSize="12pt"
                android:layout_weight="0.51"
                android:padding="10dp"
                android:imeOptions="actionDone"
                android:digits="1234567890-"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:gravity="center"
                android:selectAllOnFocus="true"
                android:autoText="false"
                android:clickable="false" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="seconds remaining: 000"
            android:id="@+id/countTextField"
            android:layout_gravity="center_horizontal"
            android:textColor="#cde657"
            android:background="#95000000"
            android:textStyle="bold"
            android:textSize="22dp"
            android:layout_height="65dp"
            android:layout_weight="0.33"
            android:layout_marginRight="5dp"
            android:padding="5dp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#304135"
        android:id="@+id/mathInfoText">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="top|center_horizontal"
            android:layout_weight="0.6">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/imageView13"
                android:layout_gravity="top|center_horizontal"
                android:src="@drawable/math_top"
                android:scaleType="centerCrop" />

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:layout_gravity="bottom"
                android:background="#202d24"
                android:alpha="0.6">

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:layout_gravity="bottom">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="THE RUNES"
                        android:id="@+id/textView10"
                        android:textColor="#ff84ea29"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="25dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="PUZZLE"
                        android:id="@+id/textView11"
                        android:layout_marginLeft="25dp"
                        android:fontFamily="sans-serif-light" />

                </LinearLayout>

            </TableRow>
        </FrameLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom"
            android:layout_weight="0.4">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/textView8"
                android:paddingLeft="25dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"
                android:textColor="#FF0066"
                android:layout_weight="0.05"
                android:text="DECIPHER THE RUNES!" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="You have found relics of an ancient people.\nTo solve this puzzle, you and your partner have to solve the rune calculations together."
                android:id="@+id/textView7"
                android:gravity="left"
                android:textSize="20dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:layout_weight="0.75" />

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="0.2">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="70dp"
                        android:background="#202d24"
                        android:layout_gravity="bottom"
                        android:layout_weight="1"
                        android:id="@+id/startMath">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="Start"
                            android:id="@+id/textView9"
                            android:background="#202d24"
                            android:layout_gravity="bottom|center_horizontal"
                            android:gravity="center_vertical|right"
                            android:paddingRight="5dp"
                            android:textColor="#ff84ea29"
                            android:layout_weight="1" />

                        <ImageView
                            android:layout_width="125dp"
                            android:layout_height="70dp"
                            android:id="@+id/imageView14"
                            android:layout_weight="1"
                            android:src="@drawable/start_arrow"
                            android:paddingRight="25dp" />
                    </TableRow>
                </LinearLayout>
            </TableRow>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>